--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$6R6eOYkhs3FkdsxG.KQU3eNUHRHyme74NjIDG8jE5gicgTLzdZ9w2"
+# 	- password: java.lang.String = "$2a$05$RiaPr0KjurlgJjUupBwAQeUqGL7urHlbYLZHKyPtqZ8iVWim4mEba"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$fjEKEuxlPO8.i1VaO/Li/u5AuRblxonvFqfbRBQRBmKfO.XNoMMgS"
+# 	- password: java.lang.String = "$2a$05$jrlC0u2Vu7Eum1SaS170/ukTumy3xRVZz.ItCWzLV/0hB/4qVWjIu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -124,4 +124,55 @@ announcement03=8
 # 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
+
+requests01=9
+
+# acme.entities.requestss.Requests{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.requestss.Requests:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Request 01"
+# 	- moment: java.util.Date = <<Mon Jun 10 10:35:00 CEST 2019>>
+# 	- deadline: java.util.Date = <<Sun Jun 30 10:35:00 CEST 2019>>
+# 	- text: java.lang.String = "This is the description of a request"
+# 	- reward: java.lang.String = "1000.00 EUR"
+# 	- ticker: java.lang.String = "RABCD-12345"
+
+requests02=10
+
+# acme.entities.requestss.Requests{id=10, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 10
+# 	- version: int = 0
+# 	from acme.entities.requestss.Requests:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Request 02"
+# 	- moment: java.util.Date = <<Tue Jul 10 10:35:00 CEST 2018>>
+# 	- deadline: java.util.Date = <<Sun Jul 29 10:35:00 CEST 2018>>
+# 	- text: java.lang.String = "This is the description of a request"
+# 	- reward: java.lang.String = "2000€"
+# 	- ticker: java.lang.String = "RABCD-12345"
+
+requests03=11
+
+# acme.entities.requestss.Requests{id=11, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 11
+# 	- version: int = 0
+# 	from acme.entities.requestss.Requests:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Request 03"
+# 	- moment: java.util.Date = <<Tue Jan 15 10:35:00 CET 2019>>
+# 	- deadline: java.util.Date = <<Thu Jan 17 12:00:00 CET 2019>>
+# 	- text: java.lang.String = "This is the description of a request"
+# 	- reward: java.lang.String = "10000€"
+# 	- ticker: java.lang.String = "REBCD-62345"
 
