--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$6R6eOYkhs3FkdsxG.KQU3eNUHRHyme74NjIDG8jE5gicgTLzdZ9w2"
+# 	- password: java.lang.String = "$2a$05$daps6kf0NvGj1ies3ibjp.JuJzxCsqoIeIAT1ewvBOl95bz9r0yf6"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$fjEKEuxlPO8.i1VaO/Li/u5AuRblxonvFqfbRBQRBmKfO.XNoMMgS"
+# 	- password: java.lang.String = "$2a$05$ifQ7jMOs66QoxHKQB1QY4u.inHH.SmKiqW5srxk4mbqI0qxieywpG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -124,4 +124,64 @@ announcement03=8
 # 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
+
+companyRecord01=9
+
+# acme.entities.companyRecords.CompanyRecords{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.companyRecords.CompanyRecords:
+# 	- serialVersionUID: long = 1
+# 	- nameCompany: java.lang.String = "Solutia"
+# 	- sector: java.lang.String = "Sector 1"
+# 	- nameCEO: java.lang.String = "CEO 1"
+# 	- description: java.lang.String = "Description 1"
+# 	- webSite: java.lang.String = "https://google.com/"
+# 	- numberPhone: java.lang.String = "(9999) 999999"
+# 	- email: java.lang.String = "romangutierrez@hotmail.com"
+# 	- isIncorporated: java.lang.Boolean = null
+# 	- numberStars: java.lang.Integer = 0
+
+companyRecord02=10
+
+# acme.entities.companyRecords.CompanyRecords{id=10, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 10
+# 	- version: int = 0
+# 	from acme.entities.companyRecords.CompanyRecords:
+# 	- serialVersionUID: long = 1
+# 	- nameCompany: java.lang.String = "Acme"
+# 	- sector: java.lang.String = "Sector 2"
+# 	- nameCEO: java.lang.String = "CEO 2"
+# 	- description: java.lang.String = "Description 2"
+# 	- webSite: java.lang.String = "https://google.com/"
+# 	- numberPhone: java.lang.String = "+9 (9999) 999999"
+# 	- email: java.lang.String = "antoniovidaldimision@gmail.com"
+# 	- isIncorporated: java.lang.Boolean = null
+# 	- numberStars: java.lang.Integer = 2
+
+companyRecord03=11
+
+# acme.entities.companyRecords.CompanyRecords{id=11, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 11
+# 	- version: int = 0
+# 	from acme.entities.companyRecords.CompanyRecords:
+# 	- serialVersionUID: long = 1
+# 	- nameCompany: java.lang.String = "Acme-Jobs"
+# 	- sector: java.lang.String = "Sector 3"
+# 	- nameCEO: java.lang.String = "CEO 3"
+# 	- description: java.lang.String = "Description 3"
+# 	- webSite: java.lang.String = "https://google.com/"
+# 	- numberPhone: java.lang.String = "+999 (9999) 999999"
+# 	- email: java.lang.String = "antonioromerocaceres@gmail.com"
+# 	- isIncorporated: java.lang.Boolean = null
+# 	- numberStars: java.lang.Integer = 5
 
