--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$6R6eOYkhs3FkdsxG.KQU3eNUHRHyme74NjIDG8jE5gicgTLzdZ9w2"
+# 	- password: java.lang.String = "$2a$05$PW.WQ0cH6oRDLrpeiRp8R.zVrKH1Pksno1bKzoJmmG227iZOXwGW."
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$fjEKEuxlPO8.i1VaO/Li/u5AuRblxonvFqfbRBQRBmKfO.XNoMMgS"
+# 	- password: java.lang.String = "$2a$05$icafmEoNPY/MPqpAJo5u/.oQhgM4WTrwRpSZ09plQ1JGSJZZk2q2G"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -124,4 +124,40 @@ announcement03=8
 # 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
+
+offer01=9
+
+# acme.entities.offers.Offer{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.offers.Offer:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = " Offer 1"
+# 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
+# 	- deadline: java.util.Date = <<Wed Jun 10 19:10:00 CEST 2026>>
+# 	- text: java.lang.String = "This is a very old offer"
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 80.00>>
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 70.00>>
+# 	- ticker: java.lang.String = "RABCD-12345"
+
+offer02=10
+
+# acme.entities.offers.Offer{id=10, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 10
+# 	- version: int = 0
+# 	from acme.entities.offers.Offer:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = " Offer 2"
+# 	- moment: java.util.Date = <<Wed Jun 10 19:10:00 CEST 2015>>
+# 	- deadline: java.util.Date = <<Mon Jun 10 19:10:00 CEST 2024>>
+# 	- text: java.lang.String = "This is a very old offer"
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 990.00>>
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 70.00>>
+# 	- ticker: java.lang.String = "RFGHI-67891"
 
