--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$RiaPr0KjurlgJjUupBwAQeUqGL7urHlbYLZHKyPtqZ8iVWim4mEba"
+# 	- password: java.lang.String = "$2a$05$wW5JhdX9aPMZ8trR4H3jEeRGrP6FanDYDfnIqqipx7OiINRfefXje"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$jrlC0u2Vu7Eum1SaS170/ukTumy3xRVZz.ItCWzLV/0hB/4qVWjIu"
+# 	- password: java.lang.String = "$2a$05$K1B65/kFkS0ZJGM4N2NFXeKbBA6vvfyTtUtDdjAWzLD3a9HViHnNK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -139,7 +139,7 @@ requests01=9
 # 	- moment: java.util.Date = <<Mon Jun 10 10:35:00 CEST 2019>>
 # 	- deadline: java.util.Date = <<Sun Jun 30 10:35:00 CEST 2019>>
 # 	- text: java.lang.String = "This is the description of a request"
-# 	- reward: java.lang.String = "1000.00 EUR"
+# 	- reward: acme.framework.datatypes.Money = <<€ 9000.00>>
 # 	- ticker: java.lang.String = "RABCD-12345"
 
 requests02=10
@@ -156,7 +156,7 @@ requests02=10
 # 	- moment: java.util.Date = <<Tue Jul 10 10:35:00 CEST 2018>>
 # 	- deadline: java.util.Date = <<Sun Jul 29 10:35:00 CEST 2018>>
 # 	- text: java.lang.String = "This is the description of a request"
-# 	- reward: java.lang.String = "2000€"
+# 	- reward: acme.framework.datatypes.Money = <<€ 2000.00>>
 # 	- ticker: java.lang.String = "RABCD-12345"
 
 requests03=11
@@ -173,6 +173,6 @@ requests03=11
 # 	- moment: java.util.Date = <<Tue Jan 15 10:35:00 CET 2019>>
 # 	- deadline: java.util.Date = <<Thu Jan 17 12:00:00 CET 2019>>
 # 	- text: java.lang.String = "This is the description of a request"
-# 	- reward: java.lang.String = "10000€"
+# 	- reward: acme.framework.datatypes.Money = <<€ 10000.00>>
 # 	- ticker: java.lang.String = "REBCD-62345"
 
