--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$aPGo/CJwjvcRO.UiOj332ugc3ImyBN7OxUBezsRt8.Wj1I2pKw2bK"
+# 	- password: java.lang.String = "$2a$05$F3RY19sjDDMziKM3d6PTluycIoxdG1zvj28mzOIYw58x6CfjaKh5S"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$eXVx6O/ZUAu1MjIlMREAtu6s8o.dkkORzjB2I/43.wy30l8AdTKli"
+# 	- password: java.lang.String = "$2a$05$.57tFO608apkGnHE4bi3b.48.nLMN/V.HFL.p85MnzqVhkTi0aODy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -127,13 +127,13 @@ announcement03=8
 
 companyRecord01=9
 
-# acme.entities.companyRecords.CompanyRecords{id=9, version=0}
+# acme.entities.companyRecords.CompanyRecord{id=9, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 9
 # 	- version: int = 0
-# 	from acme.entities.companyRecords.CompanyRecords:
+# 	from acme.entities.companyRecords.CompanyRecord:
 # 	- serialVersionUID: long = 1
 # 	- name: java.lang.String = "Solutia"
 # 	- sector: java.lang.String = "Sector 1"
@@ -142,18 +142,18 @@ companyRecord01=9
 # 	- webSite: java.lang.String = "https://google.com/"
 # 	- phone: java.lang.String = "(9999) 999999"
 # 	- email: java.lang.String = "romangutierrez@hotmail.com"
-# 	- isIncorporated: java.lang.Boolean = null
+# 	- isIncorporated: java.lang.Boolean = true
 # 	- numberStars: java.lang.Integer = 0
 
 companyRecord02=10
 
-# acme.entities.companyRecords.CompanyRecords{id=10, version=0}
+# acme.entities.companyRecords.CompanyRecord{id=10, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 10
 # 	- version: int = 0
-# 	from acme.entities.companyRecords.CompanyRecords:
+# 	from acme.entities.companyRecords.CompanyRecord:
 # 	- serialVersionUID: long = 1
 # 	- name: java.lang.String = "Acme"
 # 	- sector: java.lang.String = "Sector 2"
@@ -162,18 +162,18 @@ companyRecord02=10
 # 	- webSite: java.lang.String = "https://google.com/"
 # 	- phone: java.lang.String = "+9 (9999) 999999"
 # 	- email: java.lang.String = "antoniovidaldimision@gmail.com"
-# 	- isIncorporated: java.lang.Boolean = null
+# 	- isIncorporated: java.lang.Boolean = true
 # 	- numberStars: java.lang.Integer = 2
 
 companyRecord03=11
 
-# acme.entities.companyRecords.CompanyRecords{id=11, version=0}
+# acme.entities.companyRecords.CompanyRecord{id=11, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 11
 # 	- version: int = 0
-# 	from acme.entities.companyRecords.CompanyRecords:
+# 	from acme.entities.companyRecords.CompanyRecord:
 # 	- serialVersionUID: long = 1
 # 	- name: java.lang.String = "Acme-Jobs"
 # 	- sector: java.lang.String = "Sector 3"
@@ -182,6 +182,6 @@ companyRecord03=11
 # 	- webSite: java.lang.String = "https://google.com/"
 # 	- phone: java.lang.String = "+999 (9999) 999999"
 # 	- email: java.lang.String = "antonioromerocaceres@gmail.com"
-# 	- isIncorporated: java.lang.Boolean = null
+# 	- isIncorporated: java.lang.Boolean = true
 # 	- numberStars: java.lang.Integer = 5
 
