--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$F3RY19sjDDMziKM3d6PTluycIoxdG1zvj28mzOIYw58x6CfjaKh5S"
+# 	- password: java.lang.String = "$2a$05$VHAH0PGWtMS82.xMCoWFeOVgV0RPqeQ5O1nWB3btfUDjER3f5sEYS"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$.57tFO608apkGnHE4bi3b.48.nLMN/V.HFL.p85MnzqVhkTi0aODy"
+# 	- password: java.lang.String = "$2a$05$3ULDcYstp/aj9YypbVjo7eo482JSGZFZ5l7K2ry2GN0O8Na1AKyIm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -139,10 +139,10 @@ companyRecord01=9
 # 	- sector: java.lang.String = "Sector 1"
 # 	- ceo: java.lang.String = "CEO 1"
 # 	- description: java.lang.String = "Description 1"
-# 	- webSite: java.lang.String = "https://google.com/"
-# 	- phone: java.lang.String = "(9999) 999999"
+# 	- webSite: java.lang.String = "https://gruposolutia.com/"
+# 	- phone: java.lang.String = "(9557) 922051"
 # 	- email: java.lang.String = "romangutierrez@hotmail.com"
-# 	- isIncorporated: java.lang.Boolean = true
+# 	- isIncorporated: java.lang.Boolean = false
 # 	- numberStars: java.lang.Integer = 0
 
 companyRecord02=10
@@ -155,12 +155,12 @@ companyRecord02=10
 # 	- version: int = 0
 # 	from acme.entities.companyRecords.CompanyRecord:
 # 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Acme"
+# 	- name: java.lang.String = "Alveys Chocolates"
 # 	- sector: java.lang.String = "Sector 2"
 # 	- ceo: java.lang.String = "CEO 2"
 # 	- description: java.lang.String = "Description 2"
-# 	- webSite: java.lang.String = "https://google.com/"
-# 	- phone: java.lang.String = "+9 (9999) 999999"
+# 	- webSite: java.lang.String = "https://www.alveyschocolates.com/"
+# 	- phone: java.lang.String = "+34 (6035) 527401"
 # 	- email: java.lang.String = "antoniovidaldimision@gmail.com"
 # 	- isIncorporated: java.lang.Boolean = true
 # 	- numberStars: java.lang.Integer = 2
@@ -180,8 +180,8 @@ companyRecord03=11
 # 	- ceo: java.lang.String = "CEO 3"
 # 	- description: java.lang.String = "Description 3"
 # 	- webSite: java.lang.String = "https://google.com/"
-# 	- phone: java.lang.String = "+999 (9999) 999999"
+# 	- phone: java.lang.String = "+999 (4387) 4576329871"
 # 	- email: java.lang.String = "antonioromerocaceres@gmail.com"
-# 	- isIncorporated: java.lang.Boolean = true
+# 	- isIncorporated: java.lang.Boolean = false
 # 	- numberStars: java.lang.Integer = 5
 
