--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$wW5JhdX9aPMZ8trR4H3jEeRGrP6FanDYDfnIqqipx7OiINRfefXje"
+# 	- password: java.lang.String = "$2a$05$bJdReDHiYIbM6E0KDsdXLO9fpuzHuCQ1tIMWadNXlrXzV067BGpD."
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$K1B65/kFkS0ZJGM4N2NFXeKbBA6vvfyTtUtDdjAWzLD3a9HViHnNK"
+# 	- password: java.lang.String = "$2a$05$9vWY1iDVs0hmjJ8.G7WoG.AuhG6.pJbEMGbyo6j9n3bTn5eoKZIXq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -80,13 +80,13 @@ administratorAuthenticated=5
 
 # ./src/main/population/sample-data.xml
 
-announcement01=6
+announcement01=0
 
-# acme.entities.announcements.Announcement{id=6, version=0}
+# acme.entities.announcements.Announcement{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 6
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.announcements.Announcement:
 # 	- serialVersionUID: long = 1
@@ -95,13 +95,13 @@ announcement01=6
 # 	- moreInfo: java.lang.String = null
 # 	- text: java.lang.String = "This is the description of a sample announcement"
 
-announcement02=7
+announcement02=0
 
-# acme.entities.announcements.Announcement{id=7, version=0}
+# acme.entities.announcements.Announcement{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 7
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.announcements.Announcement:
 # 	- serialVersionUID: long = 1
@@ -110,13 +110,13 @@ announcement02=7
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is the description of another announcement"
 
-announcement03=8
+announcement03=0
 
-# acme.entities.announcements.Announcement{id=8, version=0}
+# acme.entities.announcements.Announcement{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 8
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.announcements.Announcement:
 # 	- serialVersionUID: long = 1
@@ -125,13 +125,13 @@ announcement03=8
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
 
-requests01=9
+requests01=0
 
-# acme.entities.requestss.Requests{id=9, version=0}
+# acme.entities.requestss.Requests{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 9
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
@@ -142,13 +142,13 @@ requests01=9
 # 	- reward: acme.framework.datatypes.Money = <<€ 9000.00>>
 # 	- ticker: java.lang.String = "RABCD-12345"
 
-requests02=10
+requests02=0
 
-# acme.entities.requestss.Requests{id=10, version=0}
+# acme.entities.requestss.Requests{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 10
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
@@ -156,16 +156,16 @@ requests02=10
 # 	- moment: java.util.Date = <<Tue Jul 10 10:35:00 CEST 2018>>
 # 	- deadline: java.util.Date = <<Sun Jul 29 10:35:00 CEST 2018>>
 # 	- text: java.lang.String = "This is the description of a request"
-# 	- reward: acme.framework.datatypes.Money = <<€ 2000.00>>
-# 	- ticker: java.lang.String = "RABCD-12345"
+# 	- reward: acme.framework.datatypes.Money = <<€ -2000.00>>
+# 	- ticker: java.lang.String = "RABCD-12346"
 
-requests03=11
+requests03=0
 
-# acme.entities.requestss.Requests{id=11, version=0}
+# acme.entities.requestss.Requests{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 11
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
