--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$PW.WQ0cH6oRDLrpeiRp8R.zVrKH1Pksno1bKzoJmmG227iZOXwGW."
+# 	- password: java.lang.String = "$2a$05$c5OatHXDcXfZJP4pPQkxuuuPXkM/v8g086EKDo8AGIZEC7oUim3I6"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$icafmEoNPY/MPqpAJo5u/.oQhgM4WTrwRpSZ09plQ1JGSJZZk2q2G"
+# 	- password: java.lang.String = "$2a$05$7F4SxPImiabSBX9Qgwc6Xe.ANOjHzLYAdd3X3fDneB62CxD4p5zY2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -80,13 +80,13 @@ administratorAuthenticated=5
 
 # ./src/main/population/sample-data.xml
 
-announcement01=6
+announcement01=0
 
-# acme.entities.announcements.Announcement{id=6, version=0}
+# acme.entities.announcements.Announcement{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 6
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.announcements.Announcement:
 # 	- serialVersionUID: long = 1
@@ -95,13 +95,13 @@ announcement01=6
 # 	- moreInfo: java.lang.String = null
 # 	- text: java.lang.String = "This is the description of a sample announcement"
 
-announcement02=7
+announcement02=0
 
-# acme.entities.announcements.Announcement{id=7, version=0}
+# acme.entities.announcements.Announcement{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 7
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.announcements.Announcement:
 # 	- serialVersionUID: long = 1
@@ -110,13 +110,13 @@ announcement02=7
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is the description of another announcement"
 
-announcement03=8
+announcement03=0
 
-# acme.entities.announcements.Announcement{id=8, version=0}
+# acme.entities.announcements.Announcement{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 8
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.announcements.Announcement:
 # 	- serialVersionUID: long = 1
@@ -125,13 +125,13 @@ announcement03=8
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
 
-offer01=9
+offer01=0
 
-# acme.entities.offers.Offer{id=9, version=0}
+# acme.entities.offers.Offer{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 9
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.offers.Offer:
 # 	- serialVersionUID: long = 1
@@ -139,17 +139,17 @@ offer01=9
 # 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
 # 	- deadline: java.util.Date = <<Wed Jun 10 19:10:00 CEST 2026>>
 # 	- text: java.lang.String = "This is a very old offer"
-# 	- maxMoney: acme.framework.datatypes.Money = <<€ 80.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 800.00>>
 # 	- minMoney: acme.framework.datatypes.Money = <<€ 70.00>>
 # 	- ticker: java.lang.String = "RABCD-12345"
 
-offer02=10
+offer02=0
 
-# acme.entities.offers.Offer{id=10, version=0}
+# acme.entities.offers.Offer{id=0, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 10
+# 	- id: int = 0
 # 	- version: int = 0
 # 	from acme.entities.offers.Offer:
 # 	- serialVersionUID: long = 1
@@ -157,7 +157,7 @@ offer02=10
 # 	- moment: java.util.Date = <<Wed Jun 10 19:10:00 CEST 2015>>
 # 	- deadline: java.util.Date = <<Mon Jun 10 19:10:00 CEST 2024>>
 # 	- text: java.lang.String = "This is a very old offer"
-# 	- maxMoney: acme.framework.datatypes.Money = <<€ 990.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ -990.00>>
 # 	- minMoney: acme.framework.datatypes.Money = <<€ 70.00>>
 # 	- ticker: java.lang.String = "RFGHI-67891"
 
