Customizacion Parameter del sistema terminado.

--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$e9iRNS8cu6TKM2YybX/b5.7uWfYLx/v0O9HepNnpf0UMg5TGPmVhq"
+# 	- password: java.lang.String = "$2a$05$S.7/eMvgmr7Oohvgr0a1Pu47TRfds.N1CbLNyKqdtu3eoeUCAWhqm"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$fmlj85YHqVj0qHz9jnxOquHWFW6UAuOZyIqY3BUrgjvSCaPM57rVe"
+# 	- password: java.lang.String = "$2a$05$iJ02JlfBH/kUWYFGyIhhNOKmJ4GF4j4qlOgMe9d2xBvrIpgdOOoJm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -77,25 +77,24 @@ administratorAuthenticated=5
 # 	from acme.framework.entities.Authenticated:
 # 	- serialVersionUID: long = 1
 
+customisationParameter01=6
 
-# ./src/main/population/sample-data.xml
-
-announcement01=6
-
-# acme.entities.announcements.Announcement{id=6, version=0}
+# acme.entities.customisationParameters.CustomisationParameter{id=6, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 6
 # 	- version: int = 0
-# 	from acme.entities.announcements.Announcement:
+# 	from acme.entities.customisationParameters.CustomisationParameter:
 # 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Sample announcement 01"
-# 	- moment: java.util.Date = <<Mon Jun 10 10:35:00 CEST 2019>>
-# 	- moreInfo: java.lang.String = null
-# 	- text: java.lang.String = "This is the description of a sample announcement"
+# 	- spamWordsEn: java.lang.String = "sex,hard core,viagra,cialis,nigeria,you've won,million dollar"
+# 	- spamWordsEs: java.lang.String = "sexo,hard core,viagra,cialis,nigeria,has ganado,millon de dolares"
+# 	- threshold: java.lang.Double = 1.0
 
-announcement02=7
+
+# ./src/main/population/sample-data.xml
+
+announcement01=7
 
 # acme.entities.announcements.Announcement{id=7, version=0}
 # 	from java.lang.Object:
@@ -105,12 +104,12 @@ announcement02=7
 # 	- version: int = 0
 # 	from acme.entities.announcements.Announcement:
 # 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Sample announcement 02"
-# 	- moment: java.util.Date = <<Mon Jun 10 00:00:00 CEST 2019>>
-# 	- moreInfo: java.lang.String = "http://ww.example.com"
-# 	- text: java.lang.String = "This is the description of another announcement"
+# 	- title: java.lang.String = "Sample announcement 01"
+# 	- moment: java.util.Date = <<Mon Jun 10 10:35:00 CEST 2019>>
+# 	- moreInfo: java.lang.String = null
+# 	- text: java.lang.String = "This is the description of a sample announcement"
 
-announcement03=8
+announcement02=8
 
 # acme.entities.announcements.Announcement{id=8, version=0}
 # 	from java.lang.Object:
@@ -120,18 +119,33 @@ announcement03=8
 # 	- version: int = 0
 # 	from acme.entities.announcements.Announcement:
 # 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Sample announcement 02"
+# 	- moment: java.util.Date = <<Mon Jun 10 00:00:00 CEST 2019>>
+# 	- moreInfo: java.lang.String = "http://ww.example.com"
+# 	- text: java.lang.String = "This is the description of another announcement"
+
+announcement03=9
+
+# acme.entities.announcements.Announcement{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.announcements.Announcement:
+# 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Sample very old announcement 03"
 # 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
 
-offer01=9
+offer01=10
 
-# acme.entities.offers.Offer{id=9, version=0}
+# acme.entities.offers.Offer{id=10, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 9
+# 	- id: int = 10
 # 	- version: int = 0
 # 	from acme.entities.offers.Offer:
 # 	- serialVersionUID: long = 1
@@ -144,13 +158,13 @@ offer01=9
 # 	- ticker: java.lang.String = "OABCD-12345"
 # 	- rango: java.lang.String = null
 
-offer02=10
+offer02=11
 
-# acme.entities.offers.Offer{id=10, version=0}
+# acme.entities.offers.Offer{id=11, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
-# 	- id: int = 10
+# 	- id: int = 11
 # 	- version: int = 0
 # 	from acme.entities.offers.Offer:
 # 	- serialVersionUID: long = 1
@@ -162,17 +176,4 @@ offer02=10
 # 	- minMoney: acme.framework.datatypes.Money = <<€ 50.00>>
 # 	- ticker: java.lang.String = "OFGHI-67891"
 # 	- rango: java.lang.String = null
-
-customisationParameter01=11
-
-# acme.entities.customisationParameters.CustomisationParameter{id=11, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 11
-# 	- version: int = 0
-# 	from acme.entities.customisationParameters.CustomisationParameter:
-# 	- serialVersionUID: long = 1
-# 	- spamWords: java.lang.String = "sex"
-# 	- threshold: java.lang.Double = 1.0
 
